# V2X-Hub

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile-base  Dockerfile-devcontainer  Dockerfile-final  Dockerfile-sansplugin  README-dev.md  buildall.sh  buildbase.sh  buildfinal.sh  buildsansplugins.sh
.circleci/: config.yml
.devcontainer/: devcontainer.json  devcontainer.json-dc  docker-compose.yml  launch.json
.sonarqube/: sonar-scanner.properties
configuration/local/: docker-compose-mysql.yml  docker-compose.yml
configuration/local/mysql/: add_v2xhub_user.sh
docs/: Installation_and_Setup.md
examples/tmx-exampleapps/ExamplePlugin/: CMakeLists.txt
ext/ccserver/: install_manifest.txt
ext/server/: install_manifest.txt
ext/server/src/: qserverPedestrianConfig.cmake
src/: coverage.sh
src/tmx/: install_manifest.txt
src/v2i-hub/CARMACloudPlugin/: manifest.json
src/v2i-hub/CARMAStreetsPlugin/: manifest.json
src/v2i-hub/CommandPlugin/: manifest.json
src/v2i-hub/DmsPlugin/: manifest.json
src/v2i-hub/LocationPlugin/: manifest.json
src/v2i-hub/MapPlugin/: manifest.json
src/v2i-hub/MessageLoggerPlugin/: manifest.json
src/v2i-hub/ODEPlugin/: manifest.json
src/v2i-hub/PRSPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/PortDrayagePlugin/: manifest.json
src/v2i-hub/PreemptionPlugin/: manifest.json
src/v2i-hub/PriorityRequestPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/PriorityRequestPlugin/src/: Controller.cpp  Controller.h  Ntcip1211.h  PriorityRequestMessage.h  PriorityRequestPlugin.cpp
(+17 files in other folders)
