cmake_minimum_required(VERSION 3.0.0)
PROJECT ( PriorityRequestPlugin VERSION 3.0.0 LANGUAGES CXX )

SET (TMX_PLUGIN_NAME "PriorityRequest")

FIND_PACKAGE (NetSNMP REQUIRED)

BuildTmxPlugin ( )

TARGET_INCLUDE_DIRECTORIES ( ${PROJECT_NAME} PUBLIC ${NETSNMP_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} tmxutils  ${NETSNMP_LIBRARIES})
